apps/baas/deployment-test.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: go-ms-baas-test-app
  labels:
    app: go-ms-baas-test
spec:
  selector:
    matchLabels:
      app: go-ms-baas-test
  replicas: 1
  template:
    metadata:
      labels:
        app: go-ms-baas-test
    spec:
      containers:
      - name: go-ms-baas-test
        image: allwenn/go-ms-baas-test:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 200m
