apps/baas/service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-ms-baas-test-service
  labels:
    app: go-ms-baas-test
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-ms-baas-test
